2004-11-17  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-properties-window.h:
	Don't include libnautilus files.

2004-11-17  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-desktop-icon-view.c:
	* src/nautilus-navigation-window.c:
	* src/nautilus-desktop-window.c:
	Remove old defines

	* src/file-manager/fm-directory-view.c:
	* src/file-manager/nautilus-directory-view-ui.xml:
	* src/nautilus-navigation-window-ui.xml:
	* src/nautilus-shell-ui.xml:
	Make the menus look like pre-bonobo-removal

2004-11-17  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-desktop-icon-view.c: (real_merge_menus):
	Don't have use default background on desktop context menu.

2004-11-17  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	Remove libnautilus-adapter subdir
	
	* components/Makefile.am:
	Don't build throbber atm
	
	* src/nautilus-navigation-action.c:
	Use GtkMenuToolButton instead of NautilusArrowToolbutton
	
	* src/Makefile.am:
	* src/nautilus-arrow-toolbutton.[ch]:
	Remove.

2004-11-16  Anders Carlsson  <andersca@gnome.org>

	* libnautilus-private/nautilus-window-info.c:
	(nautilus_window_info_get_ui_manager):
	It's NULL now, not CORBA_OBJECT_NIL.
	
2004-11-16  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-view.h:
	remove bonoboui inclide
	
	* src/nautilus-navigation-action.[ch]:
	Add navigation GtkAction, based on epi code
	
	* src/nautilus-window-menus.c:
	* src/nautilus-window-toolbars.c:
	Correctly handle toolbar icons for extensions

2004-11-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Remove bonoboui dependencies
	
	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-bonobo-extensions.[ch]:
	* libnautilus-private/nautilus-bonobo-ui.h:
	Remove unneeded files
	
	* libnautilus-private/nautilus-clipboard.c:
	Comment out for now.
	
	* libnautilus-private/nautilus-directory-metafile-monitor.c:
	* libnautilus-private/nautilus-metafile.c:
	* src/nautilus-application.c: 