@@ -1,5 +1,10 @@
 2004-11-17  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-image-properties-page.c: (get_property_pages):
+	Only show for images.
+
+2004-11-17  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-properties-window.h:
 	Don't include libnautilus files.
 
